# rust-minisign

./: .gitignore  Cargo.toml  LICENSE  README.md  bitbucket-pipelines.yml  rsign.key  rsign.pub
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bugs.md  suggestions.md
.github/workflows/: ci.yml
src/: base64.rs  constants.rs  errors.rs  generichash.rs  helpers.rs  keynum.rs  keypair.rs  lib.rs  macros.rs  main.rs  parse_args.rs  perror.rs  public_key.rs  secret_key.rs  signature.rs  signature_bones.rs  signature_box.rs  tests.rs  types.rs
src/crypto/: blake2b.rs  cryptoutil.rs  curve25519.rs  digest.rs  ed25519.rs  mod.rs  sha2.rs  sha512.rs  simd.rs  step_by.rs  util.rs
tests/: integration.rs  integration_tests.rs  lib_functions.rs
