[package]
name = "minisign"
version = "0.5.11"
authors = ["Frank Denis <github@pureftpd.org>", "Daniel Rangel <daniel@rangel.in>"]
description = "A crate to sign files and verify signatures."
license = "MIT"
readme = "README.md"
categories = ["cryptography"]
keywords = ["command-line", "sign", "publickey", "cryptography", "minisign"]
repository = "https://github.com/jedisct1/rust-minisign"
homepage = "https://github.com/jedisct1/rust-minisign"

[dependencies]
base64 = "0.10"
getrandom = { version = "0.1.3", features = ["std"] }
scrypt = { version = "0.2", default-features = false }

[target.'cfg(any(windows, unix))'.dependencies]
rpassword = "3.0"

[profile.dev]
lto = "thin"
opt-level = 3

[profile.test]
lto = "thin"
opt-level = 3

[profile.bench]
lto = true
opt-level = 3

[profile.release]
lto = true
panic = "abort"
opt-level = 3
