[package]
name = "minisign"
version = "0.7.9"
authors = [
    "Frank Denis <github@pureftpd.org>",
    "Daniel Rangel <daniel@rangel.in>",
]
description = "A crate to sign files and verify signatures."
edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["cryptography"]
keywords = ["command-line", "sign", "publickey", "cryptography", "minisign"]
repository = "https://github.com/jedisct1/rust-minisign"
homepage = "https://github.com/jedisct1/rust-minisign"

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", optional = false, default-features = false, features = ["wasm_js"] }

[target.'cfg(not(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown")))'.dependencies]
getrandom = { version = "0.3", optional = false, default-features = false }

[dependencies]
scrypt = { version = "0.11.0", default-features = false }
ct-codecs = "1.1.6"

[target.'cfg(any(windows, unix))'.dependencies]
rpassword = "7.4.0"

[profile.dev]
lto = "thin"
opt-level = 3

[profile.test]
lto = "thin"
opt-level = 3

[profile.bench]
lto = true
opt-level = 3

[profile.release]
lto = true
panic = "abort"
opt-level = 3
